# passport

./: .gitignore  Cargo.toml  README.md  config.toml
.tdn/: config.toml
.tdn/p2p/: db  snap.000000000000005E
app/: .gitignore  .metadata  README.md  pubspec.yaml  rust.sh
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: constants.dart  global.dart  main.dart  routes.dart
app/lib/apps/docs/: app.dart  constants.dart  details.dart  edit.dart  edit2.dart  home.dart  provider.dart
app/lib/codeviewer/: code_segments.dart
app/lib/common/: jsonrpc.dart  native.dart  websocket.dart
app/lib/data/: demos.dart  gallery_options.dart
app/lib/feature_discovery/: overlay.dart
app/lib/l10n/: README.md  gallery_localizations.dart  gallery_localizations_en.dart  gallery_localizations_zh.dart  localizations.dart  localizations_en.dart  localizations_zh.dart
app/lib/layout/: text_scale.dart
app/lib/models/: app.dart  did.dart  options.dart  profile.dart
app/lib/pages/: about.dart  account_new.dart  account_show.dart  app_info.dart  backdrop.dart  category_list_item.dart  demo.dart  home.dart  settings.dart  settings_list_item.dart  splash.dart
app/lib/profiles/: banner_demo.dart
app/lib/providers/: running_app.dart
app/lib/themes/: theme_data.dart
app/lib/widgets/: feature_discovery.dart  header.dart  profile_list_item.dart  relative_time.dart  text_scale.dart  toast.dart
app/linux/: CMakeLists.txt  main.cc  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: AppConfiguration.props  CMakeLists.txt  Runner.vcxproj
app/windows/runner/: window_configuration.cpp
assets/: index.html
core/: Cargo.toml  README.md
core/src/: group.rs  layer.rs  lib.rs  main.rs  primitives.rs  rpc.rs  server.rs  storage.rs
core/src/apps/: mod.rs
core/src/apps/did/: group.rs  mod.rs  rpc.rs
core/src/apps/docs/: group.rs
core/src/apps/ds/: group.rs  mod.rs
core/src/apps/yu/: group.rs  rpc.rs
src/: app.rs  error.rs  event.rs  layer.rs  lib.rs  main.rs  message.rs  peer.rs  primitives.rs  rpc.rs  rpc_common.rs  rpc_user.rs  server.rs  storage.rs  user_id.rs
src/apps/did/: rpc.rs
src/apps/yu/: rpc.rs
(+25 files in other folders)
