[package]
name = "assassin"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Personal distributed assistant."
repository = "https://github.com/cypherlink/assassin"
keywords = ["distributed", "blockchain", "infrastructure", "assistant"]
license = "MIT/Apache-2.0"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[lib]
name = "assassin"
crate-type = ["dylib", "staticlib"]

[dependencies]
log = "0.4"
simplelog = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
bincode = "1"
base64 = "0.11"
bs58 = "0.3"
sha3 = "0.8"
blake2 = "0.8"
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", branch = "develop", features=["serde"] }
rand = "0.7"

tdn = { path = "../../TDN" } # Dev
