[package]
name = "possport"
version = "0.0.1"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Personal distributed assistant."
repository = "https://github.com/cypherlink/possport"
keywords = ["distributed", "blockchain", "infrastructure", "assistant"]
license = "MIT/Apache-2.0"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[lib]
name = "possport"
crate-type = ["dylib", "staticlib"]

[dependencies]
log = "0.4"
simplelog = "0.7"
serde = { version = "1", features = ["derive"] }
postcard = { verison = "0.5", default-features = false, features = ["alloc"] }
base64 = "0.11"
bs58 = "0.3"
sha3 = "0.8"
blake2 = "0.8"
ed25519-dalek = "1.0"
rand = "0.7"

tdn = { path = "../../TDN" } # Dev
